Point Cloud or Pointcloud? #83585

Closed
opened 2020-12-09 12:39:33 +01:00 by Reiner Prokein · 8 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.43

Blender Version
Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-12-06 01:17, hash: 538f41e949

Short description of error
In the Add menu the Point Cloud is called "Point Cloud". In the Object menu in the convert to sub menu it is called "Pointcloud". Two different spellings.

Exact steps for others to reproduce the error
Open Blender. Have a look at the add menu. Have a look at the Object menu.

pointcloud.jpg

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.43 **Blender Version** Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-12-06 01:17, hash: `538f41e949` **Short description of error** In the Add menu the Point Cloud is called "Point Cloud". In the Object menu in the convert to sub menu it is called "Pointcloud". Two different spellings. **Exact steps for others to reproduce the error** Open Blender. Have a look at the add menu. Have a look at the Object menu. ![pointcloud.jpg](https://archive.blender.org/developer/F9497058/pointcloud.jpg)
Author

Added subscriber: @tiles

Added subscriber: @tiles

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @Grady

Added subscriber: @Grady

I think it should be 'Point Cloud', that would be more consistent with the other menu item labels like Grease Pencil just above it.

I think it should be 'Point Cloud', that would be more consistent with the other menu item labels like Grease Pencil just above it.

Added subscriber: @jenkm

Added subscriber: @jenkm
Yevgeny Makarov self-assigned this 2020-12-09 18:00:57 +01:00
It's a "point cloud" - https://en.wikipedia.org/wiki/Point_cloud

This issue was referenced by dd0df3c5d2

This issue was referenced by dd0df3c5d2b634ee7fd99f0c0d2e3c6a0c0bdaaf
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#83585
No description provided.